--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dmstr/yii2-adminlte-asset": "^1",
         "vova07/yii2-imperavi-widget": "*",
         "2amigos/yii2-ckeditor-widget": "~2.1",
-        "2amigos/yii2-highcharts-widget": "~1.0"
+        "2amigos/yii2-highcharts-widget": "~1.0",
+        "2amigos/yii2-date-picker-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
