--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
         "vova07/yii2-imperavi-widget": "*",
         "2amigos/yii2-ckeditor-widget": "~2.1",
         "2amigos/yii2-highcharts-widget": "~1.0",
-        "2amigos/yii2-date-picker-widget": "~1.0"
+        "2amigos/yii2-date-picker-widget": "~1.0",
+        "kartik-v/yii2-widget-activeform": "@dev",
+        "hscstudio/yii2-export": "1.0.0"
+        
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
